@@ -15,15 +15,15 @@ void Generator::polymorphicCode(ostream &out) const
 
     key(out);
 
-    for (auto &poly: d_polymorphic)
-        out << "        "
-            "static_assert(std::is_default_constructible<" << poly.second << 
-                                                                ">::value, "
-            "\"No default constructor for " << poly.first << " (" << 
-                                                    poly.second << ")\");\n";
 
         // static_assert(std::is_default_constructible<poly.second>::value, 
         //    "No default constructor for poly.first (poly.second)");       
+    for (auto &poly: d_polymorphic)
+        out <<  "static_assert(std::is_default_constructible<" << 
+                                                poly.second << ">::value,\n"
+                "    \"No default constructor for " << poly.first << 
+                                            " (" << poly.second << ")\");\n"
+                "\n";
 
     ifstream in;
     Exception::open(in,  d_options.polymorphicCodeSkeleton()); 
