@@ -12,8 +12,6 @@ char Options::s_defaultImplementationSkeleton[] = "bisonc++.ih";
 char Options::s_defaultParsefunSkeleton[]       = "bisonc++.cc";
 char Options::s_defaultPolymorphicSkeleton[]    = "bisonc++polymorphic";
 char Options::s_defaultPolymorphicCodeSkeleton[]= "bisonc++polymorphic.code";
-char Options::s_defaultPolymorphicInlineSkeleton[] 
-                                              = "bisonc++polymorphic.inline";
 
     // the defaults are flexc++-defaults.
     // use --flex or %flex or explicit options to use  flex defaults
