@@ -20,10 +20,6 @@ void Options::setSkeletons()
         d_polymorphicSkeleton = 
                         d_skeletonDirectory + s_defaultPolymorphicSkeleton;
 
-    if (!d_arg.option(&d_polymorphicInlineSkeleton, 'm'))
-        d_polymorphicInlineSkeleton = d_skeletonDirectory + 
-                                      s_defaultPolymorphicInlineSkeleton;
-
     if (!d_arg.option(&d_polymorphicCodeSkeleton, 'L'))
         d_polymorphicCodeSkeleton = d_skeletonDirectory + 
                                       s_defaultPolymorphicCodeSkeleton;
