@@ -101,9 +101,9 @@ $insert 4 debug "ERROR(): Forced error condition"
     throw UNEXPECTED_TOKEN__;
 }
 
-$insert polymorphicInline
+//FBB: RM insert polymorphicInline
 
-// As a convenience, when including ParserBase.h its symbols are available as
+// For convenience, when including ParserBase.h its symbols are available as
 // symbols in the class Parser, too.
 #define \@ \@Base
 
